@@ -10,19 +10,19 @@
  *  Copyright (C) 2004 Rui Nuno Capela, Steve Harris
  *  Copyright (C) 2008 Nedko Arnaudov
  *  Copyright (C) 2008 Grame
- *  
+ *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU Lesser General Public License as published by
  *  the Free Software Foundation; either version 2.1 of the License, or
  *  (at your option) any later version.
- *  
+ *
  *  This program is distributed in the hope that it will be useful,
  *  but WITHOUT ANY WARRANTY; without even the implied warranty of
  *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  *  GNU Lesser General Public License for more details.
- *  
+ *
  *  You should have received a copy of the GNU Lesser General Public License
- *  along with this program; if not, write to the Free Software 
+ *  along with this program; if not, write to the Free Software
  *  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
  *
  */
@@ -56,7 +56,7 @@ class JackMessageBuffer : public JackRunnableInterface
 {
 
     private:
-    
+
         JackThreadInitCallback fInit;
         void* fInitArg;
         JackMessage fBuffers[MB_BUFFERS];
@@ -68,15 +68,15 @@ class JackMessageBuffer : public JackRunnableInterface
         bool fRunning;
 
         void Flush();
-    
+
         void Start();
         void Stop();
- 	    
+
     public:
-    
-        JackMessageBuffer();     
+
+        JackMessageBuffer();
         ~JackMessageBuffer();
-         
+
         // JackRunnableInterface interface
         bool Execute();
 
@@ -90,16 +90,16 @@ class JackMessageBuffer : public JackRunnableInterface
 };
 
 #ifdef __cplusplus
-extern "C" 
+extern "C"
 {
 #endif
 
 void JackMessageBufferAdd(int level, const char *message);
 
 #ifdef __cplusplus
-} 
+}
 #endif
 
 };
 
-#endif 
+#endif
