@@ -22,10 +22,11 @@
 #ifndef __JackPosixMutex__
 #define __JackPosixMutex__
 
+#include "JackError.h"
+#include "JackException.h"
 #include <pthread.h>
 #include <stdio.h>
 #include <assert.h>
-#include "JackError.h"
 
 namespace Jack
 {
@@ -33,19 +34,20 @@ namespace Jack
 \brief Mutex abstraction.
 */
 
-
 class JackBasePosixMutex
 {
 
     protected:
 
         pthread_mutex_t fMutex;
+        pthread_t fOwner;
 
     public:
 
-        JackBasePosixMutex()
+        JackBasePosixMutex():fOwner(0)
         {
-            pthread_mutex_init(&fMutex, NULL);
+            int res = pthread_mutex_init(&fMutex, NULL);
+            ThrowIf(res != 0, JackException("JackBasePosixMutex: could not init the mutex"));
         }
 
         virtual ~JackBasePosixMutex()
@@ -53,30 +55,65 @@ class JackBasePosixMutex
             pthread_mutex_destroy(&fMutex);
         }
 
-        void Lock()
+        bool Lock()
         {
-            int res = pthread_mutex_lock(&fMutex);
-            if (res != 0)
-                jack_log("JackBasePosixMutex::Lock res = %d", res);
+            pthread_t current_thread = pthread_self();
+
+            if (!pthread_equal(current_thread, fOwner)) {
+                int res = pthread_mutex_lock(&fMutex);
+                if (res == 0) {
+                    fOwner = current_thread;
+                    return true;
+                } else {
+                    jack_error("JackBasePosixMutex::Lock res = %d", res);
+                    return false;
+                }
+            } else {
+                jack_error("JackBasePosixMutex::Lock mutex already locked by thread = %d", current_thread);
+                return false;
+            }
         }
 
         bool Trylock()
         {
-            return (pthread_mutex_trylock(&fMutex) == 0);
+            pthread_t current_thread = pthread_self();
+
+            if (!pthread_equal(current_thread, fOwner)) {
+                int res = pthread_mutex_trylock(&fMutex);
+                if (res == 0) {
+                    fOwner = current_thread;
+                    return true;
+                } else {
+                    jack_error("JackBasePosixMutex::Trylock res = %d", res);
+                    return false;
+                }
+            } else {
+                jack_error("JackBasePosixMutex::Trylock mutex already locked by thread = %d", current_thread);
+                return false;
+            }
         }
 
-        void Unlock()
+        bool Unlock()
         {
-            int res = pthread_mutex_unlock(&fMutex);
-            if (res != 0)
-                jack_log("JackBasePosixMutex::Unlock res = %d", res);
+            if (pthread_equal(pthread_self(), fOwner)) {
+                fOwner = 0;
+                int res = pthread_mutex_unlock(&fMutex);
+                if (res == 0) {
+                    return true;
+                } else {
+                    jack_error("JackBasePosixMutex::Unlock res = %d", res);
+                    return false;
+                }
+            } else {
+                jack_error("JackBasePosixMutex::Unlock mutex not locked by thread = %d owner %d", pthread_self(), fOwner);
+                return false;
+            }
         }
 
 };
 
 class JackPosixMutex
 {
-
     protected:
 
         pthread_mutex_t fMutex;
@@ -89,13 +126,12 @@ class JackPosixMutex
             pthread_mutexattr_t mutex_attr;
             int res;
             res = pthread_mutexattr_init(&mutex_attr);
-            assert(res == 0);
+            ThrowIf(res != 0, JackException("JackBasePosixMutex: could not init the mutex attribute"));
             res = pthread_mutexattr_settype(&mutex_attr, PTHREAD_MUTEX_RECURSIVE);
-            assert(res == 0);
+            ThrowIf(res != 0, JackException("JackBasePosixMutex: could not settype the mutex"));
             res = pthread_mutex_init(&fMutex, &mutex_attr);
-            assert(res == 0);
-            res = pthread_mutexattr_destroy(&mutex_attr);
-            assert(res == 0);
+            ThrowIf(res != 0, JackException("JackBasePosixMutex: could not init the mutex"));
+            pthread_mutexattr_destroy(&mutex_attr);
         }
 
         virtual ~JackPosixMutex()
@@ -106,8 +142,9 @@ class JackPosixMutex
         bool Lock()
         {
             int res = pthread_mutex_lock(&fMutex);
-            if (res != 0)
+            if (res != 0) {
                 jack_log("JackPosixMutex::Lock res = %d", res);
+            }
             return (res == 0);
         }
 
@@ -119,8 +156,9 @@ class JackPosixMutex
         bool Unlock()
         {
             int res = pthread_mutex_unlock(&fMutex);
-            if (res != 0)
+            if (res != 0) {
                 jack_log("JackPosixMutex::Unlock res = %d", res);
+            }
             return (res == 0);
         }
 
